@@ -1,6 +1,7 @@
 <?php
 return array(
 	'slideshows' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'slideshowid',
 		'fields' => array(
 			'slideshowid' => array(
@@ -23,6 +24,7 @@ return array(
 		),
 	),
 	'slides' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'slideid',
 		'fields' => array(
 			'slideid' => array(
@@ -59,6 +61,7 @@ return array(
 		),
 	),
 	'drules' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'druleid',
 		'fields' => array(
 			'druleid' => array(
@@ -106,6 +109,7 @@ return array(
 		),
 	),
 	'dchecks' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'dcheckid',
 		'fields' => array(
 			'dcheckid' => array(
@@ -177,6 +181,7 @@ return array(
 		),
 	),
 	'dhosts' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'dhostid',
 		'fields' => array(
 			'dhostid' => array(
@@ -212,6 +217,7 @@ return array(
 		),
 	),
 	'dservices' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'dserviceid',
 		'fields' => array(
 			'dserviceid' => array(
@@ -290,6 +296,7 @@ return array(
 		),
 	),
 	'ids' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'nodeid,table_name,field_name',
 		'fields' => array(
 			'nodeid' => array(
@@ -319,6 +326,7 @@ return array(
 		),
 	),
 	'httptest' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'httptestid',
 		'fields' => array(
 			'httptestid' => array(
@@ -425,6 +433,7 @@ return array(
 		),
 	),
 	'httpstep' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'httpstepid',
 		'fields' => array(
 			'httpstepid' => array(
@@ -483,6 +492,7 @@ return array(
 		),
 	),
 	'httpstepitem' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'httpstepitemid',
 		'fields' => array(
 			'httpstepitemid' => array(
@@ -513,6 +523,7 @@ return array(
 		),
 	),
 	'httptestitem' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'httptestitemid',
 		'fields' => array(
 			'httptestitemid' => array(
@@ -543,6 +554,7 @@ return array(
 		),
 	),
 	'nodes' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'nodeid',
 		'fields' => array(
 			'nodeid' => array(
@@ -602,6 +614,7 @@ return array(
 		),
 	),
 	'node_cksum' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => '',
 		'fields' => array(
 			'nodeid' => array(
@@ -642,6 +655,7 @@ return array(
 		),
 	),
 	'services_times' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'timeid',
 		'fields' => array(
 			'timeid' => array(
@@ -683,6 +697,7 @@ return array(
 		),
 	),
 	'alerts' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'alertid',
 		'fields' => array(
 			'alertid' => array(
@@ -780,6 +795,7 @@ return array(
 		),
 	),
 	'history' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => '',
 		'fields' => array(
 			'itemid' => array(
@@ -810,6 +826,7 @@ return array(
 		),
 	),
 	'history_sync' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'id',
 		'fields' => array(
 			'id' => array(
@@ -852,6 +869,7 @@ return array(
 		),
 	),
 	'history_uint' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => '',
 		'fields' => array(
 			'itemid' => array(
@@ -882,6 +900,7 @@ return array(
 		),
 	),
 	'history_uint_sync' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'id',
 		'fields' => array(
 			'id' => array(
@@ -924,6 +943,7 @@ return array(
 		),
 	),
 	'history_str' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => '',
 		'fields' => array(
 			'itemid' => array(
@@ -954,6 +974,7 @@ return array(
 		),
 	),
 	'history_str_sync' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'id',
 		'fields' => array(
 			'id' => array(
@@ -996,6 +1017,7 @@ return array(
 		),
 	),
 	'history_log' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'id',
 		'fields' => array(
 			'id' => array(
@@ -1054,6 +1076,7 @@ return array(
 		),
 	),
 	'history_text' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'id',
 		'fields' => array(
 			'id' => array(
@@ -1088,6 +1111,7 @@ return array(
 		),
 	),
 	'proxy_history' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'id',
 		'fields' => array(
 			'id' => array(
@@ -1146,6 +1170,7 @@ return array(
 		),
 	),
 	'proxy_dhistory' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'id',
 		'fields' => array(
 			'id' => array(
@@ -1203,7 +1228,7 @@ return array(
 				'default' => '0',
 			),
 			'dcheckid' => array(
-				'null' => false,
+				'null' => true,
 				'type' => DB::FIELD_TYPE_ID,
 				'length' => 20,
 				'ref_table' => 'dchecks',
@@ -1218,6 +1243,7 @@ return array(
 		),
 	),
 	'events' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'eventid',
 		'fields' => array(
 			'eventid' => array(
@@ -1276,6 +1302,7 @@ return array(
 		),
 	),
 	'trends' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'itemid,clock',
 		'fields' => array(
 			'itemid' => array(
@@ -1318,6 +1345,7 @@ return array(
 		),
 	),
 	'trends_uint' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'itemid,clock',
 		'fields' => array(
 			'itemid' => array(
@@ -1360,6 +1388,7 @@ return array(
 		),
 	),
 	'acknowledges' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'acknowledgeid',
 		'fields' => array(
 			'acknowledgeid' => array(
@@ -1396,6 +1425,7 @@ return array(
 		),
 	),
 	'auditlog' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'auditid',
 		'fields' => array(
 			'auditid' => array(
@@ -1455,6 +1485,7 @@ return array(
 		),
 	),
 	'auditlog_details' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'auditdetailid',
 		'fields' => array(
 			'auditdetailid' => array(
@@ -1494,6 +1525,7 @@ return array(
 		),
 	),
 	'service_alarms' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'servicealarmid',
 		'fields' => array(
 			'servicealarmid' => array(
@@ -1523,6 +1555,7 @@ return array(
 		),
 	),
 	'actions' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'actionid',
 		'fields' => array(
 			'actionid' => array(
@@ -1591,6 +1624,7 @@ return array(
 		),
 	),
 	'operations' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'operationid',
 		'fields' => array(
 			'operationid' => array(
@@ -1638,6 +1672,7 @@ return array(
 		),
 	),
 	'opmessage' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'operationid',
 		'fields' => array(
 			'operationid' => array(
@@ -1674,6 +1709,7 @@ return array(
 		),
 	),
 	'opmessage_grp' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'opmessage_grpid',
 		'fields' => array(
 			'opmessage_grpid' => array(
@@ -1698,6 +1734,7 @@ return array(
 		),
 	),
 	'opmessage_usr' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'opmessage_usrid',
 		'fields' => array(
 			'opmessage_usrid' => array(
@@ -1722,6 +1759,7 @@ return array(
 		),
 	),
 	'opcommand' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'operationid',
 		'fields' => array(
 			'operationid' => array(
@@ -1794,6 +1832,7 @@ return array(
 		),
 	),
 	'opcommand_hst' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'opcommand_hstid',
 		'fields' => array(
 			'opcommand_hstid' => array(
@@ -1818,6 +1857,7 @@ return array(
 		),
 	),
 	'opcommand_grp' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'opcommand_grpid',
 		'fields' => array(
 			'opcommand_grpid' => array(
@@ -1842,6 +1882,7 @@ return array(
 		),
 	),
 	'opgroup' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'opgroupid',
 		'fields' => array(
 			'opgroupid' => array(
@@ -1866,6 +1907,7 @@ return array(
 		),
 	),
 	'optemplate' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'optemplateid',
 		'fields' => array(
 			'optemplateid' => array(
@@ -1890,6 +1932,7 @@ return array(
 		),
 	),
 	'opconditions' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'opconditionid',
 		'fields' => array(
 			'opconditionid' => array(
@@ -1925,6 +1968,7 @@ return array(
 		),
 	),
 	'escalations' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'escalationid',
 		'fields' => array(
 			'escalationid' => array(
@@ -1981,6 +2025,7 @@ return array(
 		),
 	),
 	'applications' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'applicationid',
 		'fields' => array(
 			'applicationid' => array(
@@ -2011,6 +2056,7 @@ return array(
 		),
 	),
 	'conditions' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'conditionid',
 		'fields' => array(
 			'conditionid' => array(
@@ -2046,6 +2092,7 @@ return array(
 		),
 	),
 	'config' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'configid',
 		'fields' => array(
 			'configid' => array(
@@ -2319,9 +2366,33 @@ return array(
 				'length' => 10,
 				'default' => '1',
 			),
+			'snmptrap_logging' => array(
+				'null' => false,
+				'type' => DB::FIELD_TYPE_INT,
+				'length' => 10,
+				'default' => '1',
+			),
+		),
+	),
+	'globalvars' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
+		'key' => 'globalvarid',
+		'fields' => array(
+			'globalvarid' => array(
+				'null' => false,
+				'type' => DB::FIELD_TYPE_ID,
+				'length' => 20,
+			),
+			'snmp_lastsize' => array(
+				'null' => false,
+				'type' => DB::FIELD_TYPE_INT,
+				'length' => 10,
+				'default' => '0',
+			),
 		),
 	),
 	'functions' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'functionid',
 		'fields' => array(
 			'functionid' => array(
@@ -2358,6 +2429,7 @@ return array(
 		),
 	),
 	'graphs' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'graphid',
 		'fields' => array(
 			'graphid' => array(
@@ -2479,6 +2551,7 @@ return array(
 		),
 	),
 	'graph_discovery' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'graphdiscoveryid',
 		'fields' => array(
 			'graphdiscoveryid' => array(
@@ -2509,6 +2582,7 @@ return array(
 		),
 	),
 	'graphs_items' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'gitemid',
 		'fields' => array(
 			'gitemid' => array(
@@ -2575,6 +2649,7 @@ return array(
 		),
 	),
 	'graph_theme' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'graphthemeid',
 		'fields' => array(
 			'graphthemeid' => array(
@@ -2675,6 +2750,7 @@ return array(
 		),
 	),
 	'groups' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'groupid',
 		'fields' => array(
 			'groupid' => array(
@@ -2697,6 +2773,7 @@ return array(
 		),
 	),
 	'help_items' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'itemtype,key_',
 		'fields' => array(
 			'itemtype' => array(
@@ -2720,6 +2797,7 @@ return array(
 		),
 	),
 	'hosts' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'hostid',
 		'fields' => array(
 			'hostid' => array(
@@ -2906,6 +2984,7 @@ return array(
 		),
 	),
 	'interface' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'interfaceid',
 		'fields' => array(
 			'interfaceid' => array(
@@ -2959,6 +3038,7 @@ return array(
 		),
 	),
 	'globalmacro' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'globalmacroid',
 		'fields' => array(
 			'globalmacroid' => array(
@@ -2981,6 +3061,7 @@ return array(
 		),
 	),
 	'hostmacro' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'hostmacroid',
 		'fields' => array(
 			'hostmacroid' => array(
@@ -3010,6 +3091,7 @@ return array(
 		),
 	),
 	'hosts_groups' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'hostgroupid',
 		'fields' => array(
 			'hostgroupid' => array(
@@ -3034,6 +3116,7 @@ return array(
 		),
 	),
 	'host_inventory' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'hostid',
 		'fields' => array(
 			'hostid' => array(
@@ -3463,6 +3546,7 @@ return array(
 		),
 	),
 	'hosts_templates' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'hosttemplateid',
 		'fields' => array(
 			'hosttemplateid' => array(
@@ -3487,6 +3571,7 @@ return array(
 		),
 	),
 	'housekeeper' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'housekeeperid',
 		'fields' => array(
 			'housekeeperid' => array(
@@ -3516,6 +3601,7 @@ return array(
 		),
 	),
 	'images' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'imageid',
 		'fields' => array(
 			'imageid' => array(
@@ -3544,6 +3630,7 @@ return array(
 		),
 	),
 	'items' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'itemid',
 		'fields' => array(
 			'itemid' => array(
@@ -3827,6 +3914,7 @@ return array(
 		),
 	),
 	'item_discovery' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'itemdiscoveryid',
 		'fields' => array(
 			'itemdiscoveryid' => array(
@@ -3857,6 +3945,7 @@ return array(
 		),
 	),
 	'items_applications' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'itemappid',
 		'fields' => array(
 			'itemappid' => array(
@@ -3881,6 +3970,7 @@ return array(
 		),
 	),
 	'mappings' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'mappingid',
 		'fields' => array(
 			'mappingid' => array(
@@ -3910,6 +4000,7 @@ return array(
 		),
 	),
 	'media' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'mediaid',
 		'fields' => array(
 			'mediaid' => array(
@@ -3958,6 +4049,7 @@ return array(
 		),
 	),
 	'media_type' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'mediatypeid',
 		'fields' => array(
 			'mediatypeid' => array(
@@ -4022,6 +4114,7 @@ return array(
 		),
 	),
 	'profiles' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'profileid',
 		'fields' => array(
 			'profileid' => array(
@@ -4081,6 +4174,7 @@ return array(
 		),
 	),
 	'rights' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'rightid',
 		'fields' => array(
 			'rightid' => array(
@@ -4111,6 +4205,7 @@ return array(
 		),
 	),
 	'scripts' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'scriptid',
 		'fields' => array(
 			'scriptid' => array(
@@ -4176,6 +4271,7 @@ return array(
 		),
 	),
 	'screens' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'screenid',
 		'fields' => array(
 			'screenid' => array(
@@ -4210,6 +4306,7 @@ return array(
 		),
 	),
 	'screens_items' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'screenitemid',
 		'fields' => array(
 			'screenitemid' => array(
@@ -4317,6 +4414,7 @@ return array(
 		),
 	),
 	'services' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'serviceid',
 		'fields' => array(
 			'serviceid' => array(
@@ -4370,6 +4468,7 @@ return array(
 		),
 	),
 	'services_links' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'linkid',
 		'fields' => array(
 			'linkid' => array(
@@ -4400,6 +4499,7 @@ return array(
 		),
 	),
 	'sessions' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'sessionid',
 		'fields' => array(
 			'sessionid' => array(
@@ -4430,6 +4530,7 @@ return array(
 		),
 	),
 	'sysmaps_links' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'linkid',
 		'fields' => array(
 			'linkid' => array(
@@ -4479,6 +4580,7 @@ return array(
 		),
 	),
 	'sysmaps_link_triggers' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'linktriggerid',
 		'fields' => array(
 			'linktriggerid' => array(
@@ -4515,6 +4617,7 @@ return array(
 		),
 	),
 	'sysmaps_elements' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'selementid',
 		'fields' => array(
 			'selementid' => array(
@@ -4631,6 +4734,7 @@ return array(
 		),
 	),
 	'sysmap_element_url' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'sysmapelementurlid',
 		'fields' => array(
 			'sysmapelementurlid' => array(
@@ -4659,6 +4763,7 @@ return array(
 		),
 	),
 	'sysmaps' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'sysmapid',
 		'fields' => array(
 			'sysmapid' => array(
@@ -4821,6 +4926,7 @@ return array(
 		),
 	),
 	'sysmap_url' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'sysmapurlid',
 		'fields' => array(
 			'sysmapurlid' => array(
@@ -4855,6 +4961,7 @@ return array(
 		),
 	),
 	'triggers' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'triggerid',
 		'fields' => array(
 			'triggerid' => array(
@@ -4943,6 +5050,7 @@ return array(
 		),
 	),
 	'trigger_discovery' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'triggerdiscoveryid',
 		'fields' => array(
 			'triggerdiscoveryid' => array(
@@ -4973,6 +5081,7 @@ return array(
 		),
 	),
 	'trigger_depends' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'triggerdepid',
 		'fields' => array(
 			'triggerdepid' => array(
@@ -4997,6 +5106,7 @@ return array(
 		),
 	),
 	'users' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'userid',
 		'fields' => array(
 			'userid' => array(
@@ -5095,6 +5205,7 @@ return array(
 		),
 	),
 	'usrgrp' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'usrgrpid',
 		'fields' => array(
 			'usrgrpid' => array(
@@ -5129,6 +5240,7 @@ return array(
 		),
 	),
 	'users_groups' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'id',
 		'fields' => array(
 			'id' => array(
@@ -5153,6 +5265,7 @@ return array(
 		),
 	),
 	'valuemaps' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'valuemapid',
 		'fields' => array(
 			'valuemapid' => array(
@@ -5169,6 +5282,7 @@ return array(
 		),
 	),
 	'maintenances' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'maintenanceid',
 		'fields' => array(
 			'maintenanceid' => array(
@@ -5208,6 +5322,7 @@ return array(
 		),
 	),
 	'maintenances_hosts' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'maintenance_hostid',
 		'fields' => array(
 			'maintenance_hostid' => array(
@@ -5232,6 +5347,7 @@ return array(
 		),
 	),
 	'maintenances_groups' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'maintenance_groupid',
 		'fields' => array(
 			'maintenance_groupid' => array(
@@ -5256,6 +5372,7 @@ return array(
 		),
 	),
 	'maintenances_windows' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'maintenance_timeperiodid',
 		'fields' => array(
 			'maintenance_timeperiodid' => array(
@@ -5280,6 +5397,7 @@ return array(
 		),
 	),
 	'timeperiods' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'timeperiodid',
 		'fields' => array(
 			'timeperiodid' => array(
@@ -5338,6 +5456,7 @@ return array(
 		),
 	),
 	'regexps' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'regexpid',
 		'fields' => array(
 			'regexpid' => array(
@@ -5359,6 +5478,7 @@ return array(
 		),
 	),
 	'user_history' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'userhistoryid',
 		'fields' => array(
 			'userhistoryid' => array(
@@ -5436,6 +5556,7 @@ return array(
 		),
 	),
 	'expressions' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'expressionid',
 		'fields' => array(
 			'expressionid' => array(
@@ -5477,6 +5598,7 @@ return array(
 		),
 	),
 	'autoreg_host' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'autoreg_hostid',
 		'fields' => array(
 			'autoreg_hostid' => array(
@@ -5518,6 +5640,7 @@ return array(
 		),
 	),
 	'proxy_autoreg_host' => array(
+		'type' => DB::TABLE_TYPE_HISTORY,
 		'key' => 'id',
 		'fields' => array(
 			'id' => array(
@@ -5558,6 +5681,7 @@ return array(
 		),
 	),
 	'icon_map' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'iconmapid',
 		'fields' => array(
 			'iconmapid' => array(
@@ -5569,6 +5693,7 @@ return array(
 				'null' => false,
 				'type' => DB::FIELD_TYPE_CHAR,
 				'length' => 64,
+				'default' => '',
 			),
 			'default_iconid' => array(
 				'null' => false,
@@ -5580,6 +5705,7 @@ return array(
 		),
 	),
 	'icon_mapping' => array(
+		'type' => DB::TABLE_TYPE_CONFIG,
 		'key' => 'iconmappingid',
 		'fields' => array(
 			'iconmappingid' => array(
@@ -5605,11 +5731,13 @@ return array(
 				'null' => false,
 				'type' => DB::FIELD_TYPE_INT,
 				'length' => 10,
+				'default' => '0',
 			),
 			'expression' => array(
 				'null' => false,
 				'type' => DB::FIELD_TYPE_CHAR,
 				'length' => 64,
+				'default' => '',
 			),
 			'sortorder' => array(
 				'null' => false,
