@@ -257,6 +257,7 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.9rc1
 
+ - [ZBX-4159] fixed frontend incorrctly handle new ids for history tables in distributed setup (Vedmak)
  - [ZBX-4216] fixed weekdays in Brazilian Portuguese translation; thanks to Ricardo Santos (Richlv)
  - [ZBX-4205] fixed trigger status change not logged in audit for inherited triggers (Vedmak)
  - [ZBX-4194] fixed SQL query errors in distributed environment with three digit node numbers (asaveljevs)
